# riob.us

./: .dockerignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Procfile  README.md  app.py  callbacks_ui.py  callbacks_viewport.py  conftest.py  constants.py  docker-compose.dev.yml  docker-compose.yml  geo_helpers.py  gps_data_logic.py  gps_processing.py  gtfs_static_logic.py  interval_logic.py  map_data_logic.py  map_layers_logic.py  math_helpers.py  perf_logging.py  pyproject.toml  render.yaml  requirements.txt  robots.txt  sitemap.xml  svg_icons.py  ui_layout.py  viewport_logic.py
.github/workflows/: ci.yml
assets/: manifest.json  offline.html  styles.css  sw.js
garagens/: Garagens_de_operadores_SPPO.dbf  Garagens_de_operadores_SPPO.shp  Garagens_de_operadores_SPPO.shx  Garagens_de_operadores_SPPO.xml
gtfs/: dicionario_lecd.csv
scripts/: seo_smoke.ps1
src/: __init__.py
src/config/: __init__.py
src/core/: __init__.py  app_runtime.py
src/i18n/: __init__.py  localization.py
src/logic/: __init__.py  gps_data_logic.py  gtfs_downloader.py  gtfs_static_logic.py  interval_logic.py  map_data_logic.py  map_layers_logic.py  transitous_logic.py  viewport_logic.py
src/state/: __init__.py
src/ui/: __init__.py  (+3 more)
tests/: test_app_gtfs_wrappers.py  test_callbacks_ui.py  test_geo_helpers.py  test_gps_data_logic.py  test_gtfs_static_logic.py  test_i18n_localization.py  test_interval_logic.py  test_map_data_logic.py  test_map_layers_logic.py  test_perf_logging.py  test_pipeline_smoke.py  test_status_route_i18n.py  test_viewport_logic.py
(+4 files in other folders)
